work in progress

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -28,12 +28,14 @@
 %\input dict-ya-La-03042019
 \begin{document}
 %\fontsize{12pt}{14pt}\selectfont
-%\frontmatter
+\frontmatter
 %\tableofcontents
 
 \input title
 \newpage
 \input copyright
+\newpage
+\input parxkAshakaranudi
 \newpage
 \input nivedane
 
@@ -50,6 +52,7 @@
 \newpage
 \input tex-for-print/anubandha-2.tex
 %\input tex-for-print/anubandha-3.tex
+\newpage
 \input tex-for-print/anubandha-4.tex
 
 \newpage
