--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -7,7 +7,8 @@
 \end{center}
 
 {\renewcommand{\arraystretch}{1.3}
-\begin{longtable}{lp{5cm}cp{5cm}<{\raggedright}p{3cm}<{\raggedright}@{}}
+\tabcolsep=5pt
+\begin{longtable}{@{}lp{5cm}cp{5cm}<{\raggedright}p{3cm}<{\raggedright}@{}}
 %\hline
 \endfirsthead
 %\hline
@@ -142,23 +143,21 @@
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 1. & aMgasoVM-savasaM & aMgasoVMkina liMga taMdegaLa vacanagaLu & samagarx saMpuTa - 6 & \multicolumn{1}{p{3.5cm}}{kananxDa pusatxka pArxdhikAra,\newline beMgaLUru - 2001}\\
 2. & aMbiga - savasaM & aMbigara cwDayayxgaLa vacana & samagarx saMpuTa - 6 & --\\
 3. & akakxma - savasaM & akakxmahAdeVviya vacana & samagarx saMpuTa - 5 & --\\
 4. & akakxmamx - savasaM & akakxmamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
-%5. & aKaMDa - savasaM & aKaMDa maMDaleVshavxra vacanagaLu & samagarx saMpuTa - 9 & --\\
 5. & agaGxhaM - savasaM & agaGxvaNi haMpayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
 6. & agaCxho - savasaM & agaCxvaNi honanxyayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
 7. & ajaga - savasaM & ajagaNaNx taMdegaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
 8. & anAmi - savasaM & anAmika nAcayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
-%10. & anuga - savasaM &  anugaleVshavxra vacanagaLu & samagarx saMpuTa - 6 & --\\
 9. & apipxdeV - savasaM & apipxdeVvayayxgaLa vacanagaLu & samagarx saMpuTa - 9 & --\\
 10. & aparxmA - savasaM & aparxmANa guheVshavxra vacanagaLu & samagarx saMpuTa - 6 & --\\
 11. & amara - savasaM & amaraguMDada malilxkAjuRna taMdegaLa vacanagaLu & samagarx saMpuTa - 9 & --\\
@@ -167,8 +166,7 @@
 14. & arimA - savasaM & arivina mAritaMdegaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
 15. & alalxma - savasaM & alalxma parxBudeVvara vacanagaLu & samagarx saMpuTa - 7 & --\\
 16. & avasa - savasaM &  avasarada reVkaNaNxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
-%17. & ashavxtha - savasaM & ashavxtha rAma vacanagaLu & samagarx saMpuTa - 9 & --\\
-\hline
+%\hline
 \end{longtable}}
 \bigskip
 
@@ -178,11 +176,11 @@
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 17. & Adayayx - savasaM & AdayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & kananxDa pusatxka pArxdhikAra\\
@@ -190,22 +188,22 @@
 19. & AnaMsi - savasaM & AnaMda sidedxVshavxra vacanagaLu & samagarx saMpuTa - 9 & --\\
 20. & AyadxmA - savasaM & Ayadxkikx mArayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
 21. & Ayadxkikx - savasaM & Ayadxkikx lakakxmamx vacanagaLu & samagarx saMpuTa - 5 & --\\
-\hline
+%\hline
 \end{longtable}}
 
 \centerline{\bf i}
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 22. & imamxDi - savasaM & imamxDi gurusidadhxsAvxmigaLa shUnayxmaMtarxgoVpayx vacanagaLu & samagarx saMpuTa - 11 & kananxDa pusatxka pArxdhikAra\\
-\hline
+%\hline
 \end{longtable}}
 
 %\centerline{\bf I}
@@ -230,11 +228,11 @@
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 23. &  ugaGxDi- savasaM & ugaGxDisuva gabibxdeVvayayxgaLa vacanagaLu & samagarx saMpuTa - 6  & kananxDa pusatxka pArxdhikAra\\
@@ -243,7 +241,7 @@
 26. &  uripe - savasaM & uriliMga pedidxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
 27. &  kALavevx - savasaM & uriliMga pedidxgaLa puNayxsitxrXV kALavevx vacanagaLu & samagarx saMpuTa - 5 & --\\
 28. &  uLimeV - savasaM & uLiyumeVshavxra cikakxNaNxgaLa vacanagaLu & samagarx saMpuTa - 6  & --\\
-\hline
+%\hline
 \end{longtable}}
 \bigskip
 
@@ -252,17 +250,17 @@
 \medskip
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 29. &  ecacxri - savasaM &  ecacxrike kAyakada mukatxnAthayayxgaLa vacanagaLu & samagarx saMpuTa - 6  & kananxDa pusatxka pArxdhikAra\\
 30. &  masaNa - savasaM &  eDemaThada nAgideVvayayxgaLa puNayxsitxrXV masaNamamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
 31. &  elegA - savasaM &  elegAra kAmaNaNxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
-\hline
+%\hline
 \end{longtable}}
 \bigskip
 
@@ -271,16 +269,16 @@
 \medskip
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 32. &  EkAMta - savasaM &  EkAMtarAmi taMdegaLa vacanagaLu & samagarx saMpuTa - 6  & kananxDa pusatxka pArxdhikAra\\
 33. &  EleVshavx - savasaM &  EleVshavxra keVtayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
-\hline
+%\hline
 \end{longtable}}
 \bigskip
 
@@ -290,15 +288,15 @@
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 34. &  okakxli - savasaM &  okakxliga mudadxNaNxgaLa vacanagaLu & samagarx saMpuTa - 6  & kananxDa pusatxka pArxdhikAra\\
-\hline
+%\hline
 \end{longtable}}
 
 \centerline{\bf ka}
@@ -306,11 +304,11 @@
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 %39. &  kaMbamA - savasaM &  kaMbada mAri taMdeya vacanagaLu & samagarx saMpuTa - 7  & kananxDa pusatxka pArxdhikAra\\
@@ -333,7 +331,7 @@
 45. &  koTaTxNa - savasaM & koTaTxNada siVmamamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
 46. &  koTAra - savasaM & koTArada soVmaNaNxna vacanagaLu & samagarx saMpuTa - 7 & --\\
 47. &  koVlashAM - savasaM & koVla shAMtayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
-\hline
+%\hline
 \end{longtable}}
 \medskip
 
@@ -342,11 +340,11 @@
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 48. &  gaMgAMbi - savasaM & gaMgAMbikeya vacanagaLu & samagarx saMpuTa - 5  & kananxDa pusatxka pArxdhikAra\\
@@ -362,7 +360,7 @@
 57. &  gumamxsi - savasaM & gumamxLApurada sidadhxliMgadeVvara vacanagaLu & samagarx saMpuTa - 11 & --\\
 58. & gogagxvevx  - savasaM & gogagxvevxya vacanagaLu & samagarx saMpuTa - 5 & --\\
 59. &  goVrakaSx - savasaM & goVrakaSxna vacanagaLu & samagarx saMpuTa - 7 & --\\
-\hline
+%\hline
 \end{longtable}}
 
 \medskip
@@ -371,16 +369,16 @@
 
 {\renewcommand{\arraystretch}{1.32}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 60. &  GanaliM - savasaM & GanaliMgi deVvara vacanagaLu & samagarx saMpuTa - 11  & kananxDa pusatxka pArxdhikAra\\
 61. &  GaTiTxvA - savasaM & GaTiTxvALayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
-\hline
+%\hline
 \end{longtable}}
 
 \smallskip
@@ -389,11 +387,11 @@
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 62. &   caMdima - savasaM &  caMdimarasana vacanagaLu & samagarx saMpuTa - 7  & kananxDa pusatxka pArxdhikAra\\
@@ -403,7 +401,7 @@
 66. & DoVhara - savasaM & DoVhara kakakxyayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
 67. &  turugA - savasaM &  turugAhi rAmaNaNxna vacanagaLu & samagarx saMpuTa - 7 & --\\
 68. &  toVMTada - savasaM & toVTada sidadhxliMga shivayoVgiya vacanagaLu & samagarx saMpuTa - 11 & --\\
-\hline
+%\hline
 \end{longtable}}
 
 \smallskip
@@ -412,18 +410,18 @@
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 69. &  dasara - savasaM &  dasarayayxnavacanagaLu & samagarx saMpuTa - 7 & kananxDa pusatxka pArxdhikAra\\
 70. &  dapuviV - savasaM & dasarayayxna puNayxsitxrXV viVramamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
 71. &  dAsoVsaM - savasaM & dAsoVhara saMgaNaNxna vacanagaLu & samagarx saMpuTa - 7 & --\\
 72. &  dugagxLe - savasaM & dugagxLeya vacanagaLu & samagarx saMpuTa - 5 & --\\
-\hline
+%\hline
 \end{longtable}}
 
 \smallskip
@@ -432,11 +430,11 @@
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 73. & nagemA - savasaM &  nageya mAritaMdeya vacanagaLu & samagarx saMpuTa - 7 & kananxDa pusatxka pArxdhikAra\\
@@ -444,7 +442,7 @@
 75. & nijagu  - savasaM & nijaguNa shivayoVgiya vacanagaLu & samagarx saMpuTa - 7 & --\\
 76. & niVlamamx  - savasaM & niVlamamxna vacanagaLu & samagarx saMpuTa - 5 & --\\
 77. & nuliya  - savasaM & nuliya caMdayayxna vacanagaLu & samagarx saMpuTa - 5 & --\\
-\hline
+%\hline
 \end{longtable}}
 \smallskip
 
@@ -452,17 +450,17 @@
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 78. & puranA - savasaM &  purada nAgaNaNxna vacanagaLu & samagarx saMpuTa - 8 & kananxDa pusatxka pArxdhikAra\\
 79. & parxsABoV - savasaM & parxsAdi BoVgaNaNxna vacanagaLu & samagarx saMpuTa - 8 & --\\
 80. & parxsAleM - savasaM & parxsAdileMka baMkaNaNxnavara vacanagaLu & samagarx saMpuTa - 8 & --\\
-\hline
+%\hline
 \end{longtable}}
 
 \smallskip
@@ -471,11 +469,11 @@
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 81. & basava - savasaM & basavaNaNxnavara vacanagaLu & samagarx saMpuTa - 8 & kananxDa pusatxka pArxdhikAra\\
@@ -488,7 +486,7 @@
 88. & bokakxsa - savasaM & bokakxsada cikakxNaNxna vacanagaLu & samagarx saMpuTa - 8 & --\\
 89. & BaritA - savasaM & BaritApaRNada cenanxbasavaNaNxna vacanagaLu & samagarx saMpuTa - 8 & --\\
 90. & BoVgaNaNx - savasaM & BoVgaNaNxna vacanagaLu & samagarx saMpuTa - 8 & --\\
-\hline
+%\hline
 \end{longtable}}
 \smallskip
 
@@ -496,11 +494,11 @@
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 91. & maDivA - savasaM &  maDivALa mAcideVvara vacanagaLu & samagarx saMpuTa - 8 & kananxDa pusatxka pArxdhikAra\\
@@ -519,7 +517,7 @@
 104. & meYduna - savasaM & meYduna rAmayayxna vacanagaLu & samagarx saMpuTa - 5 & --\\
 105. & moVLige - savasaM & moVLige mArayayxna vacanagaLu & samagarx saMpuTa - 5 & --\\
 106. & moVLima - savasaM & moVLige mahAdeVviya vacanagaLu & samagarx saMpuTa - 5 & --\\
-\hline
+%\hline
 \end{longtable}}
 \smallskip
 
@@ -527,16 +525,16 @@
 
 {\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 107. & rakakxsa - savasaM & rakakxsabomimx taMdegaLa vacanagaLu &  samagarx saMpuTa - 9 & kananxDa pusatxka pArxdhikAra\\
 108. & rAyasa - savasaM &  rAyasada maMjaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
-\hline
+%\hline
 \end{longtable}}
 
 \medskip
@@ -545,15 +543,15 @@
 
 {\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 109. &  ladedxsoV - savasaM &  ladedxya soVmayayxgaLa vacanagaLu & samagarx saMpuTa - 9 & --\\
-\hline
+%\hline
 \end{longtable}}
 \smallskip
 
@@ -561,11 +559,11 @@
 
 {\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 110. &  vacashAM - savasaM & vacanaBaMDAri shAMtarasana vacanagaLu & samagarx saMpuTa - 9 & --\\
@@ -575,7 +573,7 @@
 114. & viVrasaM - savasaM & sidAdhxMta viVrasaMgayayxna vacanagaLu & samagarx saMpuTa - 9 & --\\
 115. & veVdasaM - savasaM &  veVdamUtiR saMgaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
 116. & veYdayxsaM - savasaM &  veYdayx saMgaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
-\hline
+%\hline
 \end{longtable}}
 \smallskip
 
@@ -583,17 +581,17 @@
 
 {\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 117. & shaMkara - savasaM &  shaMkara dAsimayayxna vacanagaLu & samagarx saMpuTa - 9 & --\\
 118. & shivaleM - savasaM &  shivaleMka maMcaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
 119. & shAMtaviV - savasaM & shAMtaviVreVshavxrana vacanagaLu & samagarx saMpuTa - 9 & --\\
-\hline
+%\hline
 \end{longtable}}
 \smallskip
 
@@ -601,11 +599,11 @@
 
 {\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 120. & saMapapx - savasaM &  saMgameVshavxrada apapxNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
@@ -617,7 +615,7 @@
 126. & sidadhxrA - savasaM & sidadhxrAmeVshavxrara vacanagaLu & samagarx saMpuTa - 4 & --\\
 127. & suMkabaM - savasaM & suMkada baMkaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
 128. & soDaDxLa - savasaM &  soDaDxLa bAcarasana vacanagaLu & samagarx saMpuTa - 9 & --\\
-\hline
+%\hline
 \end{longtable}}
 \smallskip
 
@@ -626,11 +624,11 @@
 \smallskip
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
-\hline
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 129. & haDapa - savasaM & haDapada apapxNaNxgaLa vacanagaLu & samagarx saMpuTa - 9 & --\\
@@ -654,7 +652,7 @@
 147. & sanA - savasaM &  savARcAra nAgamamxnasudeV vacanagaLu & samagarx saMpuTa - 14 & --\\
 148. & SaNumxKa - savasaM & SaNumxKasAvxmigaLa SaTfsathxla vacanagaLu & samagarx saMpuTa - 14 & --\\
 149. & heVmaga - savasaM & heVmagalalx haMpana heVmagalalx SaTfsathxla vacanagaLu & samagarx saMpuTa - 12 & --\\
-\hline
+%\hline
 \end{longtable}}
 
 \newpage
@@ -663,94 +661,77 @@
 {\large\bf (3) viVrasheYva kAvayxgaLa saMkiSxpatx sUci}
 \end{center}
 
+
 {\renewcommand{\arraystretch}{1.5}
-\begin{longtable}{l>{\raggedright}p{7cm}l}
+\begin{longtable}{lp{4.2cm}p{4.2cm}<{\raggedright}p{4.2cm}<{\raggedright}@{}}
+%\begin{longtable}{l>{\raggedright}p{7cm}l}
 \hline
-\multicolumn{1}{c}{\bf saMkiSxpAtxkaSxra} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf koTiTxruva saMKeyx}\\[3pt]
+\multicolumn{1}{c}{\bf saMkiSxpatx} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf kataqR} & \multicolumn{1}{c}{\bf vivara}\\[3pt]
 \hline
 \endfirsthead
 \hline
-\multicolumn{1}{c}{\bf saMkiSxpatx} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf koTiTxruva saMKeyx}\\[3pt]
+\multicolumn{1}{c}{\bf saMkiSxpatx} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf kataqR} & \multicolumn{1}{c}{\bf vivara}\\[3pt]
 \hline
 \endhead
-%\hline
+%%\hline
 \endfoot
 \endlastfoot
-anuBa & anuBavasAra &  kiVtaRne, padayx, puTa\\
-kananxni & kananxDa-kananxDa niGaMTu (kasApa) & BAga, puTa\\
-karaNa & karaNa hasige & puTa, sAlu,\\
-keYvapa & keYvalayxpadadhxti &  kiVtaRne, padayx, puTa\\
-keYvasha & keYvalayxsoVpAnanAmeYkoVtatxra shatasathxla & puTa, padayx\\
-gaNaBA & gaNaBASitaratanxmAle & puTa, sAlu\\
-cananxba. ka. & cananxbasavaNaNxnavara vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & puTa, vacana\\
-cananxsotxV & cananxbasaveVshavxradeVvara sotxVtarxda vacanagaLu & puTa, padayx\\
-cebapu & cenanxbasavapurANa & saMdhi, padayx\\
-diVkASxboV & diVkASxboVdhe & puTa, sAlu\\
-nUpura & nUtana purAtanara ragaLegaLu & puTa, sAlu\\
-padeYsha & padeYkoVtatxrashatasathxla & \\
-parate & paramAthaRgiVte & puTa, padayx\\
-paramA & paramAnuBavaboVdhe & puTa, kiVtaRne, padayx\\
-pArake & pAramAthaRparxkAshike & puTa\\
-parxBuliV & parxBuliMgaliVle & saMdhi, padayx\\
-basaTiV & basavaNaNxnavara TiVkina vacanagaLu & BAga, puTa, vacana-TiVku\\
-basapu & basavapurANa & saMdhi, padayx\\
-basava. ka. & basavaNaNxnavara vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & vacana, puTa\\
-maDivA '' & maDivALapapxna nijaliVlAmaqta vacana & \qquad '' '' ''\\
-mishArxpaR & mishArxpaRNa & puTa, sAlu\\
-liMgaliV & liMgaliVlAvilAsa cAritarx & puTa, sAlu\\
-vapaBA & vacana pariBASAkoVsha & BAga, puTa\\
-viveVka & viveVka ciMtAmaNi & puTa\\
-viVsheYpu & viVrasheYvAmaqtapurANaM & kAMDa, saMdhi, padayx\\
-shivAkoV & shivAnuBava shabadxkoVsha & puTa, TipapxNi saMKeyx\\
-Sabarxva & SaTasxthXlabarxhAmxnaMda virakatxcAritarx saMpAdaneya vacanagaLu & puTa, vacana\\
-sidadhxrA. ka. & sidadhxrAmeVshavxra vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & puTa, vacana\\
-sidedhxVva & sidedhxVshavxra vacanagaLu & puTa, vacana\\
-hirimaM & hiriya maMtarxgoVpayx & puTa, padayx\\
-anusA. & anuBavasAra & \\
-aSATxvi & aSATxvaraNa vicAradapaRNa & \\
-kani & kananxDa sAhitayx pariSatitxna kananxDa niGaMTu & \\
-kaBAge & muMbayi kanARTakada geje &\\
-karaNa  & karaNa hasige (cananxbasavaNaNxnavara vacanagaLu) (kanARTaka vishavxvidAyxlaya) &\\
-kavica & kanARTaka kavicarite & \\
-kUDasavx & kUDalUru basavaliMga sharaNara savxravacanagaLu & \\
-keVshirA & koMDaguLi keVshirAja & \\
-keYvaTiV & keYvalayxsArada TiVku & \\
-keYvapa & keYvalayxpadadhxti & \\
-keYvasha & keYvalayxsoVpAnanAmeYkoVtatxrashatasathxla & \\
-gaNaBA & gaNaBASitaratanxmAle & \\
-gurucA & gururAja cAritarx & \\
-cananxba. ka & cananxbasavaNaNxnavara vacanagaLu & \\
-cenanxsotxV & cenanxbasaveVshavxradeVvara sotxVtarxda vacanagaLu & \\
-cebapu & cenanxbasavapurANa & \\
-tirxpuvi & tirxSaSiTxpurAtana viLAsaM & \\
-purAta & purAtanara tirxvidhi & \\
-parxtiSAThx & parxtiSAThxkalapx TiVke &\\
-pwrxDharA & pwrxDharAyana kAvayx & \\
-BArada & BAratiVya saMsakxqqtidashaRna & \\
-BAvaciM & BAvaciMtAratanxM & \\
-manoVvi & manoVvijaya & \\
-rAjareV & rAjasheVKaraviLAsaM & \\
-va.pA.koV. & vacanapariBASAkoVsha & \\
-vacara & vacanashAsatxrXrahasayx & \\
-vacashA & vacanashAsatxrXsAra & \\
-shakitxvi & shakitxvishiSATxdevxYtaveVdAMta & \\
-shabashaM & shabarashaMkaraviLAsaM & \\
-sharaca & sharaNacaritAmaqta & \\
-sharasA & sharaNa sAhitayx (mAsapatirxke) & \\
-shivaciM & shivatatatxvXciMtAmaNi & \\
-shivAsU & shivAnuBavasUtarxM & \\
-shUnayxku & shUnayxsaMpAdaneyanunx kuritu &\\
-shUnayxmaM & shUnayxmaMtarxgoVpayx & \\
-SabarxsaM.  & SaTasxthXlabarxhAmxnaMda virakatxcAritarx & \\
-            & \hbox{va saMpAdaneya vacanagaLu} &\\
-sakiVla & toMbatAtxru sakiVlagaLu & \\
-savaRva & savaRpurAtanara vacana & \\
-sAnaMca & sAnaMda cariterx & \\
-sidedhxVva & sidedhxVshavxra vacana & \\
-soVmaNaNx & koTArada soVmaNaNxna vacana & \\
-savxrUpa & savxrUpasididhx TiVke & \\
-hiMdasA & hiMdU dashaRnasAra & \\
-\hline
+anuBa & anuBavasAra &  nijaguNashivayoVgi & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru\\
+kananxni & kananxDa-kananxDa niGaMTu\newline (kasApa) & EleVshavxra keVtayayx & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru\\
+karaNa & karaNahasige & cananxbasavaNaNxnavaru & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa\\
+keYvapa & keYvalayxpadadhxti & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru\\
+keYvasha & keYvalayxsoVpAnanAmeYkoVtatxra shatasathxla & imamxDi muruGA guru\-sidadhx sAvxmigaLu & malenADa viVrasheYva adhayxyana saMsethx, shivamogagx\\
+gaNaBA & gaNaBASitaratanxmAle & gubibxmalalxNaNx & shirxV ma.ni.parx. maqtuyxMjaya sAvxmigaLu, muruGAmaTha, dhAravADa\\
+guruCA & gururAjacAritarx & sidadhxnaMjeVsha & shirxVbAlaliVlA mahAMta shivayoVgiVshavxra\\
+cananxba. ka. & cananxbasavaNaNxnavara vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx, kanARTaka vishavxvidAyxlaya, dhAravADa\\
+cananxsotxV & cananxbasaveVshavxradeVvara sotxVtarxda\newline vacanagaLu & saMpAdaneya sidadhxviVraNoNxDeyara saMkalana & viVrasheYva adhayxyana saMsethx, gadaga\\
+cebapu & cenanxbasavapurANa & virUpAkaSxpaMDita & liMgAyata vidAyxBivaqdidhx saMsethxya vAknamxyashAKe, dhAravADa\\
+tirxpuvi & tirxSaSiTxpurAtana viLAsaM & suraMga & vAgedxVviVvilAsa mudArxlaya, dAvaNagere\\
+diVkASxboV & diVkASxboVdhe & kereya padamxrasa & kanARTaka vishavxvidAyxlaya, dhAravADa\\
+nUpura & nUtana purAtanara ragaLegaLu & harihara & kananxDa adhayxyana piVTha, dhAravADa\\
+padagoV & cananxbasavaNaNx padamaMtarxgoVpayxnavara vacanagaLu,\newline \hbox{ka. vishavxvidAyxlaya} & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx, kanARTaka vishavxvidAyxlaya, dhAravADa\\
+padeYsha & padeYkoVtatxrashatasathxla & & \\
+parate & paramAthaRgiVte & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru\\
+paramA & paramAnuBavaboVdhe & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru\\
+pArake & pAramAthaRparxkAshike & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru\\
+purAta & purAtanara tirxvidhi & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru\\
+parxtiSAThx & parxtiSAThxkalapxTiVke & vAdikumudacaMdarx & Ori{i}, meYsUru\\
+parxBuliV & parxBuliMgaliVle & cAmarasa & kananxDa adhayxyana piVTha, dhAravADa\\
+pwrxDharA & pwrxDharAyana kAvayx & adaqshayxkavi & kanARTaka bukfDipo, baLALxri\\
+basaTiV & basavaNaNxnavara TiVkina\newline vacanagaLu & eM.eM. kalabugiR & kananxDa adhayxyana piVTha, (saMpAdakaru) dhAravADa\\
+basapu & basavapurANa & BiVmakavi & liMgAyata vidAyxBivaqdidhx saMsethx, dhAravADa\\
+basava. ka. & basavaNaNxnavara vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & basavaNaNxnavaru & kanARTaka vishavxvidAyxlaya, dhAravADa\\
+BArada & BAratiVya saMsakxqqti dashaRna & a.na. kaqSaNxrAya (saMpAdakaru) & sAhitayx matutx saMsakxqqti aBivaqdidhx ilAKe, beMgaLUru\\
+BAvaciM & BAvaciMtAratanxM & gubibxmalalxNAyaR & kanARTaka kAvayxkalAnidhi, meYsUru\\
+maDivA & maDivALapapxna nijaliVlAmaqta vacana & maDivALapapx & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru\\
+manoVvi & manoVvijaya & gurubasava & guruvilAsa pirxMTiMgf vakfsxR, beMgaLUru\\
+mishArxpaR & mishArxpaRNa & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx, dhAravADa\\
+rAjareV &  rAjasheVKara viLAsaM & SaDakaSxradeVva & bi.e. koVdaMDarAma bukf Dipo, meYsUru\\
+liMgaliV & liMgaliVlAvilAsa cAritarx & kalalxmaThada parxBudeVvaru & muruGAmaTha, dhAravADa\\
+vapaBA & vacana pariBASAkoVsha & esf. vidAyxshaMkara (saMpAdakaru) & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru\\
+vacara & vacanashAsatxrXrahasayx & raM.rA. divAkara & adhAyxtamx kAyARlaya, hubabxLiLx\\
+vacashA & vacanashAsatxrXsAra & Pa.gu. haLakaTiTx (saMpAdakaru) & shivAnuBAva garxMthamAlA, vijApura\\
+viveVka & viveVkaciMtAmaNi & nijaguNa shivayoVgi & shirxV jagadugxru gaMgAdhara dhamaR parxcAraka maMDala, mUrusAviramaTha, hubabxLiLx\\
+viVsheYpu & viVrasheYvAmaqtapurANaM & gubibxmalalxNAyaR & enf.esf.esf. kalAyxNakeVMdarx, beLagAvi\\
+shakitxvi & shakitxvishiSAThxdevxYtaveVdAMta & Ti.ji. sidadhxpApxrAdhayx & meYsUru vishavxvidAyxnilaya, meYsUru\\
+shabashaM & shabarashaMkaraviLAsaM & SaDakaSxradeVva & liMgAyata vidAyxBivaqdidhx saMsethx, dhAravADa\\
+sharaca & sharaNacaritAmaqta & sidadhxyayxpurANika & vayasakxra shikaSxNasamiti, meYsUru\\
+sharasA & sharaNa sAhitayx (mAsapatirxke) & bi. shivamUtiRshAsitxrXV (saMpAdakaru) & savxtaMtarx kaNARTaka perxsf, beMgaLUru\\
+shivaciM & shivatatxvX ciMtAmaNi & lakakxNaNx daMDeVsha & Ori{i}, meYsUru\\
+shivAkoV & shivAnuBava shabadxkoVsha & Pa.gu. haLakaTiTx & samAja pusatxkAlaya, dhAravADa\\
+shivAsU & shivAnuBavasUtarxM & magegxya mAyideVva & \\
+shUnayxku & shUnayxsaMpAdaneyanunx kuritu & eM. cidAnaMdamUtiR & moVhana parxkAshana, meYsUru\\
+shUnayxmaM & shUnayxmaMtarxgoVpayx & imamxDi gurusidadhxsAvxmigaLu & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru\\
+Sabarxva & SaTasxthXlabarxhAmxnaMda virakatxcAritarx saMpAdaneya vacanagaLu & esf. umApati (saMpAdakaru) & viVrasheYva adhayxyana saMsethx, gadaga\\
+sakiVla & toMbatAtxru sakiVlagaLu & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx, dhAravADa\\
+savaRjacnx & savaRjacnxna vacanagaLu & savaRjacnx & ke.i. mishanf heYsUkxlf, dhAravADa\\
+savaRva & savaRpurAtanara vacana & cananxmalilxkAjuRna (saMpAdakaru) & sadadhxmaRdiVpike garxMthamAlA, meYsUru\\
+sAnaMca & sAnaMda cariterx & kumAra padamxrasa & Ori{i}, meYsUru\\
+sidadhxrA. ka. & sidadhxrAmeVshavxra vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & Arf.si. hireVmaTha (saMpAdakaru) & kanARTaka vishavxvidAyxlaya, dhAravADa\\
+sidedhxVva & sidedhxVshavxra vacanagaLu & sidadhxliMgasAvxmi & shivaliMgavijaya mudArxlaya, hAveVri\\
+savxrUpa & savxrUpasididhxTiVke & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru\\
+hiMdasA & hiMdU dashaRnasAra & lakiSxmXVpuraM shirxVnivAsAcAyaR & meYsUru vishavxvidAyxnilaya, meYsUru\\
+hirimaM & hiriya maMtarxgoVpayx & chananxbasavaNaNxnavaru & kananxDa adhayxyanasaMsethx, dhAravADa
 \end{longtable}}
 %apapxNaNx, samava & haDapada apapxNaNxna vacanagaLu &  vacana, puTa\\
 %a\char'273\char'311mA '' & a\char'273\char'311vina mAritaMdegaLa vacanagaLu & \qquad '' '' ''\\
