all prelim pages are sent to another proof

--- a/copyright.tex
+++ b/copyright.tex
@@ -8,7 +8,7 @@
 \vspace{1cm}
 
 \noindent
-{\rm Pages. ????--????}\\[7pt]
+{\rm Pages. xxxiv--896}\\[7pt]
 {\rm \copyright \ Publishers}\\[7pt]
 {\rm First Edition : 2019}\\[7pt]
 {\rm No. of Copies : 1000}\\[7pt]
@@ -63,17 +63,19 @@ mudarxkaru : ????????
 {\Large\bf saMpAdaka samiti}
 
 \bigskip
-{\fontsize{13pt}{15pt}\selectfont
-porx. ji.esf. sidadhxliMgayayx\\[6pt]
-porx. Ti.vi. veMkaTAcalashAsitxrX\\[6pt]
-porx. esf. vidAyxshaMkarf\\[6pt]
-DA. enf.esf. tArAnAthf\\[6pt]
-DA. hecf.vi. nAgarAjarAvf\\[6pt]
-DA. si. shivakumArasAvxmi\\[6pt]
-DA. guru cananxbasapapx\\[6pt]
-porx. esf. naMjuMDayayx\\[6pt]
-shirxV. Arf.esf. pUNARnaMda\\[6pt]
-DA. naMdiVshf haMce (kAyaR nivARhaka saMpAdakaru)}\relax
+\medskip
+
+{\fontsize{14pt}{16pt}\selectfont
+porx. ji.esf. sidadhxliMgayayx\\[7pt]
+DA. Ti.vi. veMkaTAcala shAsitxrXV\\[7pt]
+DA. esf. vidAyxshaMkarf\\[7pt]
+DA. enf.esf. tArAnAtha\\[7pt]
+DA. e.vi. nAgarAjarAvf\\[7pt]
+DA. si. shivakumArasAvxmi\\[7pt]
+DA. go.ru. cananxbasapapx\\[7pt]
+porx. esf. naMjuMDayayx\\[7pt]
+shirxV Arf.esf. pUNARnaMda\\[7pt]
+DA. naMdiVshf haMce (kAyaRnivARhaka saMpAdaka)}\relax
 \end{center}
 
 \vfill
