--- a/mainfile.tex
+++ b/mainfile.tex
@@ -35,25 +35,29 @@
 \newpage
 \input copyright
 \newpage
+\input tex-for-print/anubandha-2
+\newpage
+\input shubhasandesha
+\newpage
 \input parxkAshakaranudi
 \newpage
 \input nivedane
+\newpage
+\input tex-for-print/anubandha-4
 
 \mainmatter
 
 \begin{multicols}{2}
 \setlength{\columnseprule}{.5pt}
-\input tex-for-print/jss-001-281.tex
-\input tex-for-print/jss-282-501.tex
-\input tex-for-print/ya-La.tex
+\input tex-for-print/jss-001-281
+\input tex-for-print/jss-282-501
+\input tex-for-print/ya-La
 \newpage
-\input tex-for-print/anubandha-1.tex
+\input tex-for-print/anubandha-1
 \end{multicols}
 \newpage
-\input tex-for-print/anubandha-2.tex
 %\input tex-for-print/anubandha-3.tex
 \newpage
-\input tex-for-print/anubandha-4.tex
 
 \newpage
 \input jss-anukramanike1
