--- a/parxkAshakaranudi.tex
+++ b/parxkAshakaranudi.tex
@@ -2,44 +2,32 @@
 {\Huge\bfseries parxkAshakara nuDi}
 \end{center}
 
-\bigskip
-
 I nADina savaRtoVmuKa aBivaqdidhxge sharxmisi harasutitxruva dhAmiRka gurupiVThagaLalilx oMdenisida, meYsUru jilelxya kapilA\-nadiya daDadalilxruva sutUtxru jagadugxru shirxV viVrasiMhAsana mahAsaMsAthxna maThavu tananxdeV Ada ujavxla itihAsavanunx hoMdide.
 
-\smallskip
+\medskip
 
-sumAru sAvira vaSaRgaLa hiMde coVLacakerxVshaxrana pArxthaRneya meVrege Adijagadugxru shrixV shivarAtirxVshavxra shivayoVgigaLavariMda saMsAthxpitavAda sutUtxru jagadugxru piVThada divayx paraMpareyalilx baMda mahAnuBAvarugaLu loVkakalAyxNakAkxgi avisamxraNiVyavAda seVveyanenxsagutAtx baMdirutAtxre. sAhitiyxka caTuvaTikegaLige visheVSavAda prxVtAsxhavaninxtatx I piVThAdhipatigaLalilx kelavaru sAhitayxloVkakekx amUlayxvAda koDugegaLanunx koTiTxdAdxre. `parama shivAdhikayx cUDAmaNi'ge vAyxKAyxnavanunx baredu, maleya mAdeVshavxrarige Asharxya niVDida sidadhxnaMja deVshikeVMdarxru; `amugi deVvayayxgaLa sAMgatayx'vanunx bareda kavi shivaliMga\-deVvanige perxVraka-poVSakarAda kapini naMjuMDa deVshikeVMdarxru; toVMTada sidadhxliMga yatigaLa shiSayx parxmuKaralilx obabxrAgi savxtaMtarx vacanakArarAgiruva GanaliMgi shivayoVgigaLu; `maMtarxmahaSiR'gaLenisi `shivamaMtarx mahime' eMba garxMthavanunx racisida jagadugxru shrixV shivarAtirxVshavxra mahAsAvxmigaLu; `GanaliMgideVvara vacanagaLu' matutx shirxV gwriVshaMkara mahAsAvxmigaLavara `akakxmahAdeVvi' caMpUkAvayx-ivugaLanunx saMsakxrisi, saMpAdisikoTaTxvarU, nADina kalAyxNavanenxsagidavarU, pArxtaHsamxraNiVyarU Ada paramapUjayx `shirxVmanamxhArAja rAjagurutilaka' jagadugxru DA. shirxV shivarAtirx rAjeVMdarx mahAsAvxmigaLavaru - ivareV modalAdavaru sAhitayx, saMsakxqqtigaLa poVSakarAgi kavigaLige, kalAvidarige, vidAvxMsarige AsharxyadAtarAgidAdxre.
+sumAru sAvira vaSaRgaLa hiMde coVLacakerxVshavxrana pArxthaRneya meVrege Adijagadugxru shirxV shivarAtirxVshavxra shivayoVgigaLavariMda saMsAthxpitavAda sutUtxru jagadugxru piVThada divayx paraMpareyalilx baMda mahAnuBAvarugaLu loVkakalAyxNakAkxgi avisamxraNiVya seVveyanenxsagutatx baMdirutAtxre. sAhitiyxka caTuvaTikegaLige visheVSavAda porxVtAsxhavaninxtatx I piVThAdhipatigaLalilx kelavaru sAhitayxloVkakekx amUlayxvAda koDugegaLanunx koTiTxdAdxre. `parama shivAdhikayx cUDAmaNi'ge vAyxKAyxnavanunx baredu, maleya mAdeVshavxrarige Asharxya niVDida sidadhxnaMja deVshikeVMdarxru; `amugi deVvayayxgaLa sAMgatayx'vanunx bareda kavi shivaliMga\-deVvanige perxVraka-poVSakarAda kapini naMjuMDa deVshikeVMdarxru; toVMTada sidadhxliMga yatigaLa shiSayxparxmuKaralilx obabxrAgi savxtaMtarx vacana\-kAra\-rAgiruva GanaliMga shivayoVgigaLu; `maMtarxmahaSiR'gaLenisi `shivamaMtarx mahime' garxMthavanunx racisida jagadugxru shirxV shivarAtirxVshavxra mahAsAvxmigaLu; `GanaliMgadeVvara vacanagaLu' matutx shirxV gwriVshaMkara mahAsAvxmigaLavara `akakxmahAdeVvi'\break caMpUkAvayx - ivugaLanunx saMsakxrisi, saMpAdisikoTaTxvarU, nADina kalAyxNavanenxsagidavarU, pArxtaHsamxraNiVyarU Ada paramapUjayx shirxVmanamxhArAja rAjagurutilaka jagadugxru DA. shirxV shivarAtirx rAjeVMdarx mahAsAvxmigaLavaru - ivareV modalAdavaru sAhitayx, saMsakxqqti\-gaLa poVSakarAgi kavigaLige, kalAvidarige, vidAvxMsarige AsharxyadAtarAgidAdxre. I piVThavu saMsAthxpisiruva dhAmiRka, sheYkaSxNika, sAhitiyxka hAgU sAMsakxqqtika saMsethxgaLalilx jagadugxru shirxV shivarAtirxVshavxra garxMtha\-mAleyU oMdu. sumAru 300kUkx hecucx mwlika garxMthagaLanunx parxkaTisiruva I mAleyalilx Iga \textbf{``shivapada ratanxkoVsha''}veMba mahatavxda kaqti parxkaTavAgutitxruvudu saMtoVSada saMgati.
 
-\smallskip
+\medskip
 
-I piVThavu saMsAthxpisiruva dhAmiRka, sheYkaSxNika, sAhitiyxka hAgU sAMsakxqqtika saMsethxgaLalilx jagadugxru shirxV shivarAtirxVshavxra garxMtha\-mAleyU oMdu. sumAru 300kUkx hecucx mwlika garxMthagaLanunx parxkaTisiruva I mAleyalilx Iga ``shivapada ratanxkoVsha''veMba mahatavxda kaqti parxkaTavAgutitxruvudu saMtoVSada saMgati.
+I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha'' saMsakxqqta garxMthavu namamx saMsethxyiMda \underline{\qquad} ralilx parxkaTavAyitu. kanARTaka sakARrada aMdina kananxDa matutx saMsakxqqti sacivarAda mAnayx shirxV goVviMda kArajoVLara adhayxkaSxte\-yalilx beMgaLUrinalilx naDeda kaqti biDugaDe samAraMBadalilx hAjaridadx halavu jana vidAvxMsaru I mwlika kaqtiya kananxDa anuvAda \hbox{tutARgi} AgabeVkeMdu otAtxyisidaru. avara pirxVtipUvaRka Agarxhakekx sapxMdisida mAnayx sacivaru ilAKeyiMda agatayx anudAna\break niVDuvudAgi sathxLadalilxyeV GoVSisidaru, aSeTxV alalx, tiMgaLoLagAgi maMjUrAtiyanUnx horaDisikoTaTxru. saMsakxqqti matutx\break vidavxtitxna kelasagaLa kuritaMte shirxV kArajoVLara I Asakitxge nAvu mukatxkaMThada shAlxGane salilxsabayasutetxVve. hiVge modalige anuvAdaveMdu pArxraMBavAda I kAyaR tananx savxrUpa, vAyxpitxgaLanunx visatxrisikoMDu hosadoMdu baqhatf yoVjaneV Agi rUpugoMDitu. mUlada kaqtiyu saMsakxqqta AgamagaLige bahuteVka niSaThxvAgitutx. I hosa kaqtiyu kananxDa viVrasheYva kAvayxgaLu matutx vacanagaLanUnx - kelavu veVLe aparUpada rUDhigata padagaLanUnx - aLavaDisikoMDitu, idara vivaragaLanunx kAyaR\-nivARhaka saMpAdaka DA. naMdiVshf haMceyavaru ``niveVdane''yalilx visAtxravAgi vivarisiruvudariMda nAvu ililx matetx adanunx heVLabayasuvudilalx. iMthadoMdu mahatAvxkAMkeSxya kaqti rUpugoLaLxlu sahakarisida saMpAdaka maMDaLiya elalx vidavxnamxNigaLige, vividha riVtiyalilx sAhitayxka sahAyavanunx niVDida vidAvxMsarige, pariNatarige matutx salahegArarige nAvu ABArigaLAgidedxVve.
 
-\smallskip
+\medskip
 
-I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha''veMba saMsakxqqta garxMthavu namamx saMsethxyiMda ????? ralilx parxkaTavAyitu. kanARTaka sakARrada aMdina kananxDa matutx saMsakxqqti sacivarAda mAnayx shirxV goVviMda kArajoVLara adhayxkaSxte\-yalilx kaqti beMgaLUrinalilx biDugaDe samAraMBadalilx hAjaridadx halavu jana vidAvxMsaru I mwlika kaqtiya kananxDa anuvAda\break tutARgi AgabeVkeMdu otAtxyisidaru. avara pirxVtipUvaRka Agarxhakekx sapxMdisida mAnayx sacivaru ilAKeyiMda agatayx anudAna\break niVDuvudAgi sathxLadalilxyeV GoVSisidaru, aSeTxV alalx, tiMgaLoLagAgi maMjUrAtiyanUnx haraDisiToTaTxru. saMsakxqqti matutx\break vidavxtitxna kelasagaLa kuritaMte shirxV kArajoVLara I Asakitxge nAvu mukatxkaMThada shAlxGane salilxsabayasutetxVve.
+parxkaTaNa viBAgada mAji nideRVshakaru porx. ke.si. shivapapx, hAli nideVRshaka shirxV porx. morabada malilxkAjuRna, porx. \hbox{maleyUru}, gurusAvxmi, shirxV. Ti.pi. parxBusAvxmi, visheVSata. shirxV nagaleR shivakumArf avarige namamx kaqtajacnxtegaLu salulxtatxve. yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. yoVgAnaMda, shirxV ajuRnf kashayxpf, shirxV shivashaMkarf matutx shirxV rAGaveVMdarx parxsAdf, muKapuTa vinAyxsakarAda\break shirxV maMjunAtha avara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
 
-\smallskip
+\medskip
 
-hiVge anuvAdaveMdu pArxraMBavAda I kAyaR tananx savxrUpa, vAyxpitxgaLanunx visatxrisikoMDu hosadoMdu baqhatf yoVjane\-yAgi rUpugoMDitu. mUlada kaqti saMsakxqqta AgamagaLige bahuteVka niSaThxvAgitutx. I hosa kaqtiyu kananxDa viVrasheYva kAvayxgaLu matutx vacanagaLanUnx - kelavu veVLe aparUpada rUDhigata padagaLanUnx - aLavaDisikoMDitu, idara vivaragaLanunx kAyaR\-nivARhaka saMpAdakarAda DA. naMdiVshf haMceyavaru ``niveVdane''yalilx visAtxravAgi vivarisiruvudariMda nAnu ililx matetx adanunx heVLahoVguvudilalx.
+yoVjanege dhanasahAyavanonxdagisida kanARTaka sakARrada kananxDa matutx saMsakxqqti ilAKege - visheVSataH aMdu ilAKeya sacivarAgidadx iMdu upa muKayxmaMtirxyAgiruva shirxV goVviMda kArajoVLarige - aBimAnapUvaRka parxNAmagaLu.
 
-\smallskip
+\medskip
 
-iMthadoMdu mahatAvxkAMkeSxya kaqti rUpugoLaLxlu sahakarisida saMpAdaka maMDaLiya elalx vidavxnamxNigaLige, vividha riVtiya sAhitayxka sahAyavanunx niVDida vidAvxMsarige, pariNatarige matutx salahegArarige nAvu ABArigaLAgidedxVve.
+I yoVjaneya dhiVshakitx matutx kirxyAshakitxgaLAgi mAgaRdashaRna niVDida paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx\break mahAsAvxmigaLavaru matutx vijayapura jAcnxnayoVgAsharxmada nirABAri caramUtiRgaLAda pUjayx shirxV sidedhxVshavxra sAvxmigaLavarige namamx gwravada maNihAravanunx salilxsabayasutetxVne.
 
-\smallskip
+\medskip
 
-parxkaTaNa viBAgada mAji nideRVshakaru porx. ke.si. shivapapx, nideVRshaka shirxV porx. sorabada malilxkAjuRna, porx. maleyUru, gurusAvxmi, shirxV. Ti.pi. parxBusAvxmi, vesheVSata. shirxV nagaleR shivakumArf avarige namamx kaqtajacnxtegaLu salulxtatxve.
+I pusatxkavanunx suMdaravAgi mudirxsi koTiTxruva \underline{\qquad\qquad} ivarige vaMdanegaLu.
 
-\smallskip
+\vskip .3cm
 
-yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. yoVgAnaMda, shirxV ajuRnf kashayxpf, shirxV shivashaMkarf matutx shirxV rAGaveVMdarx parxsAdf, muKayxpuTa vinAyxsakarAda shirxV maMjunAtha avara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
-
-\smallskip
-
-yoVjanege dhanasahAyavanonxdagisida kanARTaka sakARrada kananxDa matutx saMsakxqqti ilAKege -- visheVSataH aMdu ilAKeya sacivarAgidadx iMdu upa muKayxmaMtirxyAgiruva shirxV goVviMda kArajoVLarige aBimAnapUvaRka parxNAmagaLu.
-
-I pusatxkavanunx suMdaravAgi mudirxsi koTiTxruva ????????????????? ivarige vaMdanegaLu.
-
-\vskip 1cm
-
-\hfill {\bf parxkAshakaru}
+\hfill {\large\bf parxkAshakaru}
