--- a/tex-for-print/anubandha-2.tex
+++ b/tex-for-print/anubandha-2.tex
@@ -1,17 +1,13 @@
 \begin{center}
-{\Huge\bfseries anubaMdha 2}
-
-\vskip 1cm
-
 {\large\bf padasaMgarxha mADikoTiTxruva vidAvxMsarugaLa vivara}
-\end{center}
+
+\thispagestyle{empty}
 
 \lhead[]{}
 \rhead[]{}
 
-\vskip -.5cm
-
-{\renewcommand{\arraystretch}{1.4}
+\begin{minipage}[t]{7cm}
+{\renewcommand{\arraystretch}{1.5}
 %\begin{longtable}{|r|p{10cm}|}
 \begin{longtable}{rl}
 \hline
@@ -21,7 +17,7 @@
 \hline
 {\bf karx.saM.} & \multicolumn{1}{c}{\bf vidAvxMsara hesaru}\\[3pt]
 \hline
-  & \\[-15pt]
+  & \\[-10pt]
 \endhead
 %\hline
 \endfoot
@@ -36,9 +32,9 @@
 %\hline
 5 &  uSAdeVvi si.ji., meYsUru\\
 %\hline
-6 & guruliMgapapx dhabAle, akakxlakoVTe\\
+6 & karibasavarAjeVMdarx sAvxmiVji, baLALxri\\
 %\hline
-7 & karibasavarAjeVMdarx sAvxmiVji, baLALxri\\
+7 & guruliMgapapx dhabAle, akakxlakoVTe\\
 8 &  caMdarxyayx bi.naM., meYsUru\\
 9 &  caMdarxsheVKarayayx pi.enf., tumakUru\\
 %\hline
@@ -58,8 +54,27 @@
 18 &  pUjAri bi.bi., solAlxpura\\
 %\hline
 19 &  basavarAju koV.raM., tumakUru\\
-20 & bALapapx (shirxVmati) Arf.ePf.\\
+20 & bALapapx (shirxVmati) Arf.ePf.
+\end{longtable}}
+\end{minipage}
+\qquad\quad
+\begin{minipage}[t]{7cm}
+{\renewcommand{\arraystretch}{1.5}
+%\begin{longtable}{|r|p{10cm}|}
+\begin{longtable}{rl}
+\hline
+{\bf karx.saM.} & \multicolumn{1}{c}{\bf vidAvxMsara hesaru}\\[3pt]
+\hline
+\endfirsthead
+\hline
+{\bf karx.saM.} & \multicolumn{1}{c}{\bf vidAvxMsara hesaru}\\[3pt]
+\hline
+  & \\[-10pt]
+\endhead
 %\hline
+\endfoot
+\endlastfoot
+  & \\[-10pt]
 21 & maMjuLa bi.esf., tumakUru\\
 %\hline
 22 & mahAdeVvayayx Ti.Arf., beMgaLUru\\
@@ -98,3 +113,5 @@
 39 &  selavxlapx, beMgaLUru\\
 %\hline
 \end{longtable}}
+\end{minipage}
+\end{center}
