--- a/title.tex
+++ b/title.tex
@@ -3,16 +3,16 @@
 \vfill
 
 \begin{center}
-{\fontsize{45}{45}\selectfont\bfseries shivapada ratanxkoVsha}\relax
+{\fontsize{50}{50}\selectfont\bfseries shivapada ratanxkoVsha}\relax
 
 \medskip
 
-{\Large\bfseries (viVrasheYva-liMgAyata pAriBASika padakoVsha)}
+{\LARGE\bfseries (viVrasheYva-liMgAyata pAriBASika padakoVsha)}
 \end{center}
 
 \vfill
 
-\centerline{\large\bfseries kananxDa matutx saMsakxqqti ilAKeya dhanasahAyadoMdide}\relax
+\centerline{\Large\bfseries kananxDa matutx saMsakxqqti ilAKeya dhanasahAyadoMdige}\relax
 
 \vfill
 
@@ -21,4 +21,8 @@
 
 \medskip
 
-\centerline{\large\bfseries jeesfesf \  garxMthamAle, meYsUru.}
+\centerline{\large\bfseries jagadugxru shirxV shivarAtirxVshavxra  garxMthamAle}
+
+\smallskip
+
+\centerline{\large\bfseries meYsUru}
